<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.qzy.vendor.ui.Menu.MenuFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_performance" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.qzy.vendor.ui.Orders.OrdersFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.qzy.vendor.ui.Performance.NotificationsFragment"
        android:label="@string/title_performance"
        tools:layout="@layout/fragment_menu" />
</navigation>